config-root/namespaces/jx/grafana/grafana-ingress.yaml
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: jx
  labels:
    helm.sh/chart: grafana-6.1.12
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/version: "7.3.3"
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - host: grafana-jx.dev.jenkins-x.me
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
